comecei a escrever o conteudo

--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Título do site</title>
+    <title></title>
 </head>
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Cursos gratis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso HTML</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore doloribus culpa vero eveniet necessitatibus maiores sapiente accusantium qui maxime rem. Itaque dolor aspernatur ratione error repellat et iusto maxime ad?</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti atque nisi earum voluptas. Nisi voluptate, quidem nam corporis possimus distinctio esse tempora maxime aliquam nostrum officiis sint necessitatibus, ab officia.</p>
         </article>
     </main>
 </body>
